--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,49 +6,34 @@ html, body {
 body {
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 20px;
-}
-
-h1 {
-	font-family: 'Times', Times, 'Times New Roman', serif;
-	font-size: 60px;
-	font-weight: bold;
-	/*padding: 20px;*/
-}
-
-p {
-	font-family: 'Arial', Helvetica, sans-serif;
-	font-size: 20px;
 	text-height: 1.5;
 	color: black;
-	margin-left: 15px;
 }
 
 label {
-	/*font-family: "sans-serif";*/
-	font-size: 20px;
-	text-height: 1.5;
-	color: black;
 	padding: 20px 20px 20px 20px;
 }
 
 input, select {
-	height: 32px;
+	height: 30px;
     width: 95%;
+ 	border-radius: 4px;
+    border: 2px solid black;    
     margin-top: 10px;
  	margin-left: 20px;
- 	margin-bottom: 10px;
-    border-style: solid;
-    border-radius: 4px;
-    border-color: black;
-    border-width: 2px;
+ 	margin-bottom: 12px;
 }
 
 button {
 	font-size: 12px;
-	height: 50px;
-	width: 100px;
+	height: 40px;
+	width: 150;
 	background-color: gray;
 	color: white;
+	border-radius: 4px;
+	border: 1px  solid ivory;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	margin-left: 20px;
 }
 
@@ -64,12 +49,6 @@ button {
 	position: relative;
 	height: 640px;
 	width: 1200px;
-/*	background-image: url("../images/new-york-times-search.png");
-	background-size: 1180px 640px;*/
-/*	border-style: solid;
-	border-radius: 6px;
-	border-color: black;
-	border-width: 2px;*/
 }
 
 #banner {
@@ -81,13 +60,14 @@ button {
 #search {
 	height: 440px;
 	width: 1140px;
-	border-style: solid;
 	border-radius: 6px;
-	border-color: black;
-	border-width: 2px;
+	border: 2px solid black;
 	margin: auto;
 	margin-top: 0px;
 	margin-left: 34px;
+	display: inline-block;
+	/* Display none while results are being viewed */
+	/*display: none;*/
 }
 
 #searchBar {
@@ -96,23 +76,42 @@ button {
 	margin: 0px 0px 0px 0px;
 }
 
-#searchButton {
-	/*background: url('../images/search.png') left center no-repeat;*/
-}	
-
-#clearButton {
-	/*background: url('../images/trashcan.png') left center no-repeat;*/
+#results {
+	height: 440px;
+	width: 1140px;
+	border-radius: 6px;
+	border: 2px solid black;
+	margin: auto;
+	margin-top: 0px;
+	margin-left: 34px;
+	/* Initial display until search is executed */
+	display: none;	
+	/*display: inline-block;*/
 }
+
+#resultsBar {
+	height: 46px;
+	width: 100%;
+	margin: 0px 0px 0px 0px;
+}
+
+#resultsText {
+	height: 300px;
+	max-height: 300px;
+	width: 95%;
+	margin-left: 20px;
+}
+
+/*clip: shape(top, right, bottom, left); NB 'rect' is the only available option */
 
 /*#clipOne {
   position: absolute;
   clip: rect(10px, 1176px, 200px, 2px);
-  /* clip: shape(top, right, bottom, left); NB 'rect' is the only available option */
+ 
 }
 
 #clipTwo {
   position: absolute;
   clip: rect(220px, 1176px, 276px, 2px);
-  /* clip: shape(top, right, bottom, left); NB 'rect' is the only available option */
 }*/
 
